--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,24 @@
 {
+  "name": "toda/phalcon",
+  "description": "Toda phalcon package",
+  "keywords": ["framework", "phalcon"],
+  "license": "MIT",
+  "type": "project",
+  "authors": [
+    {
+      "name": "Toda",
+      "email": "dttong93@gmail.com"
+    }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=5.6.21"
+  },
+  "require-dev": {
 
+  },
+  "autoload": {
+    "psr-4": {
+    }
+  }
 }
