--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,17 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.5.9"
+    "php": ">=5.5.9",
+    "ext-phalcon": "^3.0",
+    "swiftmailer/swiftmailer": "~5.2",
+    "phpoffice/phpexcel": "~1.8.1"
   },
   "require-dev": {
 
   },
   "autoload": {
     "psr-4": {
+      "Toda\Phalcon\\": "src/"
     }
   }
 }
