--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "php": ">=5.5.9",
     "swiftmailer/swiftmailer": "~5.2",
-    "phpoffice/phpexcel": "~1.8.1"
+    "phpoffice/phpexcel": "~1.8.1",
+    "intervention/image": "^2.3"
   },
   "require-dev": {
 
