--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "toda/phalcon",
+  "name": "toda/project",
   "description": "Toda phalcon package",
   "keywords": ["framework", "phalcon"],
   "license": "MIT",
